Hata yönetimi dil seçeneği ile eklendi.